- Removed the day properties from the example items - Removed an extra tab before the guts of the example callback functions - Added grid line rules to the stylesheet including some variations for fixed layouts and flexible layouts - Set the overflow to hidden on the item rows - Set item bar height to 25 pixels - Added nowrap while trying to fix wierd issue in chrome when last viewable grid line drops down ~20px - Removed the left padding from the bar guts - Fancied up the bars a bit using CSS3 properties - Added a min/max property to the gantt chart for offset calculation - Added a duration method to calculate the duration in ms, days, hours and minutes - Added an offset method which calculates the offset for a specific item and sets the left of the item (experimental) - Added an offsets method which loops through the items and calls the offset method for each item - Added a stamps method which calculates the time stamps for an item - Added an extend method which adjusts the min/max properties if the item is gt/lt the existing min/max - Added empty scale method which will later be used to draw the chart bar headers - Added a bunch of column divs for testing - Added class name to .ganttify-grid element which specifies grid line spacing - Couple of debug console.log calls to see what the min/max is

--- a/ganttify.css
+++ b/ganttify.css
@@ -22,10 +22,33 @@
 	overflow:hidden;
 /*	background:#eee; */
 	width:55%;
+	white-space:nowrap;
+}
+.ganttify-grid-line{
+	width:0px;
+	overflow:visible;
+	height:100%;
+	float:left;
+/*	margin-right:25%; */
+}
+.ganttify-grid-flexible .ganttify-grid-line{
+	margin-right:10%;
+}
+.ganttify-grid-fixed-day .ganttify-grid-line{
+	margin-right:25px;
+}
+.ganttify-grid-line i{
+	display:block;
+	width:1px;
+	height:100%;
+	background:#eee;
 }
 .ganttify-clear{
 	clear:both;
 	height:0px;
+	overflow:hidden;
+}
+.ganttify-item-row{
 	overflow:hidden;
 }
 .ganttify-item-title,
@@ -64,17 +87,31 @@
 .ganttify-item-bar{
 	width:55%;
 	position:relative;
+	height:25px;
 }
 .ganttify-item-bar-guts{
-	padding:5px;
+	padding:5px 5px 5px 0px;
 	height:15px;
+	position:absolute;
 	line-height:15px;
 }
 .ganttify-item-bar-guts div{
-	border:1px solid #ddd;
+/*	border:1px solid #ddd; */
+	border:1px solid #a80077;
 	background:#eee;
 	border-radius:3px;
 	-moz-border-radius:3px;
 	-webkit-border-radius:3px;
 	text-align:center;
+	opacity:0.8;
+	filter:alpha(opacity=80);
+	-khtml-opacity:0.8;
+	-moz-opacity:0.8;
+	color:white;
+	background: #cb60b3; /* old browsers */
+	background: -moz-linear-gradient(top, #cb60b3 0%, #c146a1 50%, #a80077 51%, #db36a4 100%); /* firefox */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#cb60b3), color-stop(50%,#c146a1), color-stop(51%,#a80077), color-stop(100%,#db36a4)); /* webkit */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cb60b3', endColorstr='#db36a4',GradientType=0 ); /* ie */
+	text-shadow: 0px 1px 1px #cb60b3;
+	filter: dropshadow(color=#cb60b3, offx=0, offy=1);
 }
